Alignment issues

--- a/css/tellraw.css
+++ b/css/tellraw.css
@@ -245,11 +245,30 @@ div[class*='col-xs-'] {
 
 #header_row {
 	display:flex;
-	margin: 0 -5px;
+	flex-direction: column;
+	margin: -5px 0;
 }
 
 #header_row > .header_row_item  {
-	margin: 0 5px;
+	margin: 5px 0;
+}
+
+@media only screen and (min-width: 650px) {
+	#header_row {
+		flex-direction: row;
+		margin: 0 -5px;
+	}
+
+	#header_row > .header_row_item {
+		margin: 0 5px;
+	}
+}
+
+@media only screen and (max-width: 649px) {
+	#header_row > div.header_row_item {
+		display: flex;
+		flex-direction: row-reverse;
+	}
 }
 
 #main_page_header_text {
